force-app/main/default/objects/Onboarding_Program__c/Onboarding_Program__c.object-meta.xml
<CustomObject>
    <label>Onboarding Trail</label>
    <nameField>
        <label>Trail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>