force-app/main/default/objects/Onboarding_Program__c/fields/Duration_Type__c.field-meta.xml
<CustomField>
    <fullName>Duration_Type__c</fullName>
    <label>Duration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hour(s)</fullName>
            </value>
            <value>
                <fullName>Day(s)</fullName>
            </value>
            <value>
                <fullName>Week(s)</fullName>
            </value>
            <value>
                <fullName>Month(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>