force-app/main/default/objects/Onboarding_Program__c/listViews/All_Private_Onboarding_Programs.listView-meta.xml
<ListView>
    <fullName>All_Private_Onboarding_Programs</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Public__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Private Onboarding Programs</label>
</ListView>